src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT_END
    COMMENT_START
    DO
    ELSE
    EMIT
    FUNC_END
    FUNC_START
    ID
    IF
    LOOP
    STRING
    THEN
    VARIABLE

Grammar

Rule 0     S' -> Comandos
Rule 1     Comandos -> Comandos Comando
Rule 2     Comandos -> <empty>
Rule 3     Comando -> Expressao
Rule 4     Comando -> Imprime
Rule 5     Expressao -> Expressao Termo +
Rule 6     Expressao -> Expressao Termo -
Rule 7     Expressao -> Expressao Termo *
Rule 8     Expressao -> Expressao Termo /
Rule 9     Expressao -> Expressao Termo %
Rule 10    Expressao -> Termo
Rule 11    Imprime -> Expressao DOT
Rule 12    Imprime -> DOTSTRING
Rule 13    Termo -> NUMBER

Terminals, with rules where they appear

%                    : 9
*                    : 7
+                    : 5
-                    : 6
/                    : 8
COMMENT_END          : 
COMMENT_START        : 
DO                   : 
DOT                  : 11
DOTSTRING            : 12
ELSE                 : 
EMIT                 : 
FUNC_END             : 
FUNC_START           : 
ID                   : 
IF                   : 
LOOP                 : 
NUMBER               : 13
STRING               : 
THEN                 : 
VARIABLE             : 
error                : 

Nonterminals, with rules where they appear

Comando              : 1
Comandos             : 1 0
Expressao            : 3 5 6 7 8 9 11
Imprime              : 4
Termo                : 5 6 7 8 9 10

Parsing method: LALR

state 0

    (0) S' -> . Comandos
    (1) Comandos -> . Comandos Comando
    (2) Comandos -> .

    DOTSTRING       reduce using rule 2 (Comandos -> .)
    NUMBER          reduce using rule 2 (Comandos -> .)
    $end            reduce using rule 2 (Comandos -> .)

    Comandos                       shift and go to state 1

state 1

    (0) S' -> Comandos .
    (1) Comandos -> Comandos . Comando
    (3) Comando -> . Expressao
    (4) Comando -> . Imprime
    (5) Expressao -> . Expressao Termo +
    (6) Expressao -> . Expressao Termo -
    (7) Expressao -> . Expressao Termo *
    (8) Expressao -> . Expressao Termo /
    (9) Expressao -> . Expressao Termo %
    (10) Expressao -> . Termo
    (11) Imprime -> . Expressao DOT
    (12) Imprime -> . DOTSTRING
    (13) Termo -> . NUMBER

    DOTSTRING       shift and go to state 6
    NUMBER          shift and go to state 7

    Comando                        shift and go to state 2
    Expressao                      shift and go to state 3
    Imprime                        shift and go to state 4
    Termo                          shift and go to state 5

state 2

    (1) Comandos -> Comandos Comando .

    DOTSTRING       reduce using rule 1 (Comandos -> Comandos Comando .)
    NUMBER          reduce using rule 1 (Comandos -> Comandos Comando .)
    $end            reduce using rule 1 (Comandos -> Comandos Comando .)


state 3

    (3) Comando -> Expressao .
    (5) Expressao -> Expressao . Termo +
    (6) Expressao -> Expressao . Termo -
    (7) Expressao -> Expressao . Termo *
    (8) Expressao -> Expressao . Termo /
    (9) Expressao -> Expressao . Termo %
    (11) Imprime -> Expressao . DOT
    (13) Termo -> . NUMBER

  ! shift/reduce conflict for NUMBER resolved as shift
    DOTSTRING       reduce using rule 3 (Comando -> Expressao .)
    $end            reduce using rule 3 (Comando -> Expressao .)
    DOT             shift and go to state 9
    NUMBER          shift and go to state 7

  ! NUMBER          [ reduce using rule 3 (Comando -> Expressao .) ]

    Termo                          shift and go to state 8

state 4

    (4) Comando -> Imprime .

    DOTSTRING       reduce using rule 4 (Comando -> Imprime .)
    NUMBER          reduce using rule 4 (Comando -> Imprime .)
    $end            reduce using rule 4 (Comando -> Imprime .)


state 5

    (10) Expressao -> Termo .

    DOT             reduce using rule 10 (Expressao -> Termo .)
    NUMBER          reduce using rule 10 (Expressao -> Termo .)
    DOTSTRING       reduce using rule 10 (Expressao -> Termo .)
    $end            reduce using rule 10 (Expressao -> Termo .)


state 6

    (12) Imprime -> DOTSTRING .

    DOTSTRING       reduce using rule 12 (Imprime -> DOTSTRING .)
    NUMBER          reduce using rule 12 (Imprime -> DOTSTRING .)
    $end            reduce using rule 12 (Imprime -> DOTSTRING .)


state 7

    (13) Termo -> NUMBER .

    DOT             reduce using rule 13 (Termo -> NUMBER .)
    NUMBER          reduce using rule 13 (Termo -> NUMBER .)
    DOTSTRING       reduce using rule 13 (Termo -> NUMBER .)
    $end            reduce using rule 13 (Termo -> NUMBER .)
    +               reduce using rule 13 (Termo -> NUMBER .)
    -               reduce using rule 13 (Termo -> NUMBER .)
    *               reduce using rule 13 (Termo -> NUMBER .)
    /               reduce using rule 13 (Termo -> NUMBER .)
    %               reduce using rule 13 (Termo -> NUMBER .)


state 8

    (5) Expressao -> Expressao Termo . +
    (6) Expressao -> Expressao Termo . -
    (7) Expressao -> Expressao Termo . *
    (8) Expressao -> Expressao Termo . /
    (9) Expressao -> Expressao Termo . %

    +               shift and go to state 10
    -               shift and go to state 11
    *               shift and go to state 12
    /               shift and go to state 13
    %               shift and go to state 14


state 9

    (11) Imprime -> Expressao DOT .

    DOTSTRING       reduce using rule 11 (Imprime -> Expressao DOT .)
    NUMBER          reduce using rule 11 (Imprime -> Expressao DOT .)
    $end            reduce using rule 11 (Imprime -> Expressao DOT .)


state 10

    (5) Expressao -> Expressao Termo + .

    DOT             reduce using rule 5 (Expressao -> Expressao Termo + .)
    NUMBER          reduce using rule 5 (Expressao -> Expressao Termo + .)
    DOTSTRING       reduce using rule 5 (Expressao -> Expressao Termo + .)
    $end            reduce using rule 5 (Expressao -> Expressao Termo + .)


state 11

    (6) Expressao -> Expressao Termo - .

    DOT             reduce using rule 6 (Expressao -> Expressao Termo - .)
    NUMBER          reduce using rule 6 (Expressao -> Expressao Termo - .)
    DOTSTRING       reduce using rule 6 (Expressao -> Expressao Termo - .)
    $end            reduce using rule 6 (Expressao -> Expressao Termo - .)


state 12

    (7) Expressao -> Expressao Termo * .

    DOT             reduce using rule 7 (Expressao -> Expressao Termo * .)
    NUMBER          reduce using rule 7 (Expressao -> Expressao Termo * .)
    DOTSTRING       reduce using rule 7 (Expressao -> Expressao Termo * .)
    $end            reduce using rule 7 (Expressao -> Expressao Termo * .)


state 13

    (8) Expressao -> Expressao Termo / .

    DOT             reduce using rule 8 (Expressao -> Expressao Termo / .)
    NUMBER          reduce using rule 8 (Expressao -> Expressao Termo / .)
    DOTSTRING       reduce using rule 8 (Expressao -> Expressao Termo / .)
    $end            reduce using rule 8 (Expressao -> Expressao Termo / .)


state 14

    (9) Expressao -> Expressao Termo % .

    DOT             reduce using rule 9 (Expressao -> Expressao Termo % .)
    NUMBER          reduce using rule 9 (Expressao -> Expressao Termo % .)
    DOTSTRING       reduce using rule 9 (Expressao -> Expressao Termo % .)
    $end            reduce using rule 9 (Expressao -> Expressao Termo % .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for NUMBER in state 3 resolved as shift
